# SVLA

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  phase1_qdepth_repro.yaml  phase2_geo3head.yaml  phase3_geo_sup.yaml  pi0_libero.yaml
docs/: experiment_blueprint.json  experiment_blueprint.md  ideation_summary.md  literature_seed.md  phase0_smoke_metrics.json  phase0_status.md  phase1_substrate_status.md  workspace_manifest.json
paper/: README.md  main.tex  refs.bib
paper/figures/: gen_figures.py  train_metrics.json  vqvae_metrics.json
scripts/: eval_libero.py  extract_libero_depth_gt.py  pretrain_vqvae.py  train.py
src/georel_vla/: __init__.py  model.py
src/georel_vla/backbones/: __init__.py  base.py  pi0.py  stub.py
src/georel_vla/codebooks/: __init__.py  vqvae.py
src/georel_vla/data/: __init__.py  libero_geom.py  normal_from_depth.py
src/georel_vla/experts/: __init__.py  depth_expert.py
src/georel_vla/losses/: __init__.py  qdepth.py
tests/: test_backbones_libero.py  test_depth_expert.py  test_model.py  test_qdepth_loss.py  test_scripts.py  test_smoke.py  test_vqvae.py
